# winget-lib

./: README.md  pyproject.toml
winget_lib/: main.py
winget_lib/core/: manifest.py
winget_lib/core/winget/: defaultLocale.py  installer.py  locale.py  singleton.py  version.py
