[tool.poetry]
name = "winget-lib"
version = "0.1.0"
description = ""
authors = ["Easton Pillay <easton@planeteaston.com>"]

[tool.poetry.dependencies]
python = "^3.10"
datamodel-code-generator = "^0.13.0"
PyYAML = "^6.0"
typer = {extras = ["all"], version = "^0.4.2"}
rich = "^12.4.4"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
